// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single choice custom field renders and allows you to select values 1`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  Choice A
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  Choice B
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field renders and allows you to select values 2`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  checked=true
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  Choice A
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  Choice B
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field renders and allows you to select values 3`] = `
Object {
  "personalInformation": Object {
    "customFields": Object {
      "singleChoiceCustomField1": Object {
        "answers": Array [
          Object {
            "answerType": "Choice",
            "choice": "Choice A",
          },
        ],
        "questionId": "singleChoiceCustomField1",
      },
    },
  },
}
`;

exports[`single choice custom field renders and allows you to select values 4`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  Choice A
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  checked=true
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  Choice B
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field renders and allows you to select values 5`] = `
Object {
  "personalInformation": Object {
    "customFields": Object {
      "singleChoiceCustomField1": Object {
        "answers": Array [
          Object {
            "answerType": "Choice",
            "choice": "Choice B",
          },
        ],
        "questionId": "singleChoiceCustomField1",
      },
    },
  },
}
`;

exports[`single choice custom field with "."s renders and allows you to select values 1`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  A.D
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  B.D
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field with "."s renders and allows you to select values 2`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  checked=true
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  A.D
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  B.D
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field with "."s renders and allows you to select values 3`] = `
Object {
  "personalInformation": Object {
    "customFields": Object {
      "singleChoiceCustomField1": Object {
        "answers": Array [
          Object {
            "answerType": "Choice",
            "choice": "A.D",
          },
        ],
        "questionId": "singleChoiceCustomField1",
      },
    },
  },
}
`;

exports[`single choice custom field with "."s renders and allows you to select values 4`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        style="flex: 1 1 auto;"
      >
        <fieldset
          class=""
          data-cvent-id="contact-custom-field-singleChoiceCustomField1"
        >
          <legend
            class="label"
            for="singleChoiceCustomField1"
          >
            <span
              class=""
            >
              <span
                class=""
              >
                * 
              </span>
              <span
                data-cvent-id="label"
              >
                <span />
              </span>
            </span>
          </legend>
          <div
            class=""
          >
            <ul
              class=""
              data-cvent-id="input"
              id="singleChoiceCustomField1"
              style="display: flex;"
            >
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_0"
              >
                <input
                  class=""
                  id="singleChoiceCustomField1_0"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="0"
                />
                <label
                  for="singleChoiceCustomField1_0"
                >
                  A.D
                </label>
              </li>
              <li
                class=""
                data-cvent-id="option-singleChoiceCustomField1_1"
              >
                <input
                  checked=true
                  class=""
                  id="singleChoiceCustomField1_1"
                  name="singleChoiceCustomField1"
                  required=""
                  type="radio"
                  value="1"
                />
                <label
                  for="singleChoiceCustomField1_1"
                >
                  B.D
                </label>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`single choice custom field with "."s renders and allows you to select values 5`] = `
Object {
  "personalInformation": Object {
    "customFields": Object {
      "singleChoiceCustomField1": Object {
        "answers": Array [
          Object {
            "answerType": "Choice",
            "choice": "B.D",
          },
        ],
        "questionId": "singleChoiceCustomField1",
      },
    },
  },
}
`;
